--- a/assignments/a07.markdown
+++ b/assignments/a07.markdown
@@ -7,3 +7,7 @@ categories: [assignments]
 
 # A07: Automated jury
 
+This assignment helps you practice with abductive reasoning. Your task is to create an automated jury, i.e., a system that determines if a defendant is guilty or not by examing the evidence. We will use my [Paragon](/notes/paragon.html) system to encode the evidence and perform the reasoning.
+
+Details forthcoming.
+
