--- a/assignments/a10.markdown
+++ b/assignments/a10.markdown
@@ -7,4 +7,5 @@ categories: [assignments]
 
 # A10: Cats vs. dogs
 
-Dataset: https://www.kaggle.com/c/dogs-vs-cats/data
+This assignment helps you practice classification of images with neural networks. Your task is to distinguish photos with cats from photos with dogs. We will use a dataset from a [Kaggle competition](https://www.kaggle.com/c/dogs-vs-cats/data). Details forthcoming.
+
