--- a/assignments/a11.markdown
+++ b/assignments/a11.markdown
@@ -7,7 +7,11 @@ categories: [assignments]
 
 # A11: News classification
 
+This assignment helps you practice with classification of text documents. Your task is to classify news articles into one of several topic categories. Details forthcoming.
+
+{% comment %}
 Naive bayesian approach
+{% endcomment %}
 
 
 
